--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "engines": {
     "node": ">= 7.6.0"
   },
+  "now": {
+    "dotenv": "variables.env.now"
+  },
   "scripts": {
     "start": "node ./start.js",
     "watch": "nodemon ./start.js --ignore public/",
@@ -39,6 +42,7 @@
     "mongoose-mongodb-errors": "0.0.2",
     "multer": "1.3.0",
     "nodemailer": "3.1.5",
+    "now": "^15.0.11",
     "passport": "0.3.2",
     "passport-local": "1.0.0",
     "passport-local-mongoose": "4.0.0",
